# MCHP_Bootloader

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md  bootloader_script.bat  build.bat
firmware/sam_c21n_xpro.X/nbproject/: Makefile-genesis.properties  Makefile-local-sam_c21n_xpro.mk  Makefile-sam_c21n_xpro.mk  Makefile-variables.mk  configurations.xml
firmware/sam_c21n_xpro.X/nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml  private.xml
firmware/src/: main.c
firmware/src/config/sam_c21n_xpro/: btl.ld  definitions.h  harmony-manifest-failure.yml  harmony-manifest-success.yml  initialization.c  pin_configurations.csv
firmware/src/config/sam_c21n_xpro/bootloader/: bootloader_common.c  bootloader_common.h  bootloader_uart.c
firmware/src/config/sam_c21n_xpro/peripheral/clock/: plib_clock.c
firmware/src/config/sam_c21n_xpro/peripheral/nvmctrl/: plib_nvmctrl.c
firmware/src/config/sam_c21n_xpro/peripheral/port/: plib_port.c  plib_port.h
firmware/src/config/sam_c21n_xpro/peripheral/sercom/usart/: plib_sercom1_usart.c  plib_sercom1_usart.h  plib_sercom7_usart.c  plib_sercom7_usart.h
firmware/src/config/sam_c21n_xpro/peripheral/systick/: plib_systick.c
firmware/src/config/sam_c21n_xpro/sam_c21n_xpro.mhc/: GraphSettings.yml  core.yml  project.yml  sercom1.yml  sercom7.yml  settings.yml  uart_bootloader.yml
firmware/src/packs/ATSAMC21N17A_DFP/: atsamc21n17a.h  device.h
firmware/src/packs/ATSAMC21N17A_DFP/pio/: samc21n17a.h
release/: sam_c21n17a_v090.hex  sam_c21n17a_v091.hex  sam_c21n_v092.hex  sam_c21n_v101.hex
toolchain/: flash.cmake  flash.in  generate_jlink.bat
